--- a/output/abccare_endog_si30y_inc_labor_smale.tex
+++ b/output/abccare_endog_si30y_inc_labor_smale.tex
@@ -1,18 +1,17 @@
-% matrix: allsi30y_inc_labor_smale file: abccare_endog_si30y_inc_labor_smale.tex  30 Sep 2016 13:30:34
+% matrix: allsi30y_inc_labor_smale file: abccare_endog_si30y_inc_labor_smale.tex   3 Oct 2016 11:32:59
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R & 18169.158 &     0.075 & 21891.223 &     0.150 & 15649.704 &     0.115 & 18835.850 &     0.185 &  6692.125 &     0.325 & -6376.989 &     0.600 \\  
-Mother'sEducation &  5722.000 &     0.090 &  6064.495 &     0.260 &  4618.608 &     0.155 &  8200.867 &     0.160 & -1400.198 &     0.595 &  1963.911 &     0.405 \\  
-PIAT(5-7) &         . &         . &         . &         . &   459.787 &     0.180 &  1828.085 &     0.110 &   482.878 &     0.245 &  3339.008 &     0.095 \\  
-Education(30) &         . &         . &         . &         . & 15803.528 &     0.000 & 22139.904 &     0.015 & 14309.524 &     0.010 & 26836.996 &     0.025 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.107 &     0.410 &     0.193 &     0.365 &     0.251 &     0.320 &     0.011 &     0.495 \\  
-BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &  -603.780 &     0.810 & -1545.085 &     0.920 \\  
-Cognitive &         . &         . &  -896.956 &     0.525 &         . &         . & -1.37e+04 &     0.815 &         . &         . & -1.38e+04 &     0.770 \\  
-NonCognitive &         . &         . & 10273.761 &     0.105 &         . &         . &  7533.493 &     0.175 &         . &         . &  2273.177 &     0.410 \\  
-Constant & -3.16e+04 &     0.780 & -3.48e+04 &     0.630 & -2.72e+05 &     0.985 & -5.26e+05 &     0.965 & -1.73e+05 &     0.960 & -5.98e+05 &     0.940 \\  
-F-stat &     2.327 &         . &     1.963 &         . &     4.833 &         . &     7.182 &         . &     4.348 &         . &    90.584 &         . \\  
-R2 &     0.068 &         . &     0.128 &         . &     0.343 &         . &     0.465 &         . &     0.491 &         . &     0.806 &         . \\  
-Observations &    65.990 &         . &    48.050 &         . &    54.580 &         . &    41.790 &         . &    32.700 &         . &    23.210 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R & 18169.158 &     0.075 & 21891.223 &     0.150 & 15649.704 &     0.115 & 18835.850 &     0.185 \\  
+Mother'sEducation &  5722.000 &     0.090 &  6064.495 &     0.260 &  4618.608 &     0.155 &  8200.867 &     0.160 \\  
+PIAT(5-7) &         . &         . &         . &         . &   459.787 &     0.180 &  1828.085 &     0.110 \\  
+Education(30) &         . &         . &         . &         . & 15803.528 &     0.000 & 22139.904 &     0.015 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.107 &     0.410 &     0.193 &     0.365 \\  
+Cognitive &         . &         . &  -896.956 &     0.525 &         . &         . & -1.37e+04 &     0.815 \\  
+NonCognitive &         . &         . & 10273.761 &     0.105 &         . &         . &  7533.493 &     0.175 \\  
+Constant & -3.16e+04 &     0.780 & -3.48e+04 &     0.630 & -2.72e+05 &     0.985 & -5.26e+05 &     0.965 \\  
+F-stat &     2.327 &         . &     1.963 &         . &     4.833 &         . &     7.182 &         . \\  
+R2 &     0.068 &         . &     0.128 &         . &     0.343 &         . &     0.465 &         . \\  
+Observations &    66.000 &         . &    48.000 &         . &    65.000 &         . &    63.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
