--- a/output/abccare_endog_si30y_inc_labor_spooled.tex
+++ b/output/abccare_endog_si30y_inc_labor_spooled.tex
@@ -1,18 +1,17 @@
-% matrix: allsi30y_inc_labor_spooled file: abccare_endog_si30y_inc_labor_spooled.tex  30 Sep 2016 13:34:36
+% matrix: allsi30y_inc_labor_spooled file: abccare_endog_si30y_inc_labor_spooled.tex   3 Oct 2016 11:35:47
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R & 11535.688 &     0.050 & 12651.283 &     0.120 &   737.125 &     0.455 &  2566.556 &     0.350 & -4472.644 &     0.775 & -6297.721 &     0.745 \\  
-Mother'sEducation &  2434.213 &     0.150 &  2080.712 &     0.245 &   781.845 &     0.380 &  1694.780 &     0.315 & -3615.641 &     0.930 & -3732.434 &     0.890 \\  
-PIAT(5-7) &         . &         . &         . &         . &  -141.277 &     0.665 &  -404.600 &     0.730 &    45.770 &     0.455 &   116.671 &     0.440 \\  
-Education(30) &         . &         . &         . &         . &  8611.813 &     0.000 &  9596.386 &     0.000 & 10670.168 &     0.000 & 13245.701 &     0.000 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.133 &     0.380 &     0.216 &     0.355 &     0.251 &     0.165 &     0.220 &     0.340 \\  
-BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &  -293.837 &     0.865 &  -319.053 &     0.820 \\  
-Cognitive &         . &         . &  1884.609 &     0.380 &         . &         . &  1085.829 &     0.450 &         . &         . & -2497.011 &     0.640 \\  
-NonCognitive &         . &         . &  3812.599 &     0.215 &         . &         . &  7728.614 &     0.045 &         . &         . &  4284.417 &     0.200 \\  
-Constant &  1214.597 &     0.475 &  4214.795 &     0.465 & -7.69e+04 &     0.950 & -7.48e+04 &     0.875 & -6.37e+04 &     0.975 & -9.82e+04 &     0.925 \\  
-F-stat &     2.136 &         . &     1.751 &         . &     5.592 &         . &     4.982 &         . &     4.192 &         . &     4.391 &         . \\  
-R2 &     0.036 &         . &     0.060 &         . &     0.211 &         . &     0.255 &         . &     0.371 &         . &     0.473 &         . \\  
-Observations &   131.790 &         . &    99.730 &         . &   110.130 &         . &    91.980 &         . &    76.160 &         . &    61.910 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R & 10576.303 &     0.065 & 11165.829 &     0.125 &   283.356 &     0.490 &  1836.270 &     0.410 \\  
+Mother'sEducation &  1851.130 &     0.205 &  1131.843 &     0.375 &   496.581 &     0.430 &  1052.668 &     0.365 \\  
+PIAT(5-7) &         . &         . &         . &         . &   -81.009 &     0.595 &  -320.784 &     0.705 \\  
+Education(30) &         . &         . &         . &         . &  8097.138 &     0.000 &  9141.309 &     0.000 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.130 &     0.330 &     0.192 &     0.325 \\  
+Cognitive &         . &         . &  2308.860 &     0.305 &         . &         . &   785.891 &     0.465 \\  
+NonCognitive &         . &         . &  2665.092 &     0.190 &         . &         . &  6876.181 &     0.065 \\  
+Constant &  7067.552 &     0.405 & 14188.359 &     0.340 & -7.33e+04 &     0.965 & -7.05e+04 &     0.920 \\  
+F-stat &     1.965 &         . &     1.522 &         . &     5.746 &         . &     4.742 &         . \\  
+R2 &     0.031 &         . &     0.056 &         . &     0.210 &         . &     0.251 &         . \\  
+Observations &   132.000 &         . &   101.000 &         . &   130.000 &         . &   133.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
