--- a/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
@@ -1,18 +1,17 @@
-% matrix: allsi30y_inc_trans_pub_spooled file: abccare_endog_si30y_inc_trans_pub_spooled.tex  30 Sep 2016 13:35:16
+% matrix: allsi30y_inc_trans_pub_spooled file: abccare_endog_si30y_inc_trans_pub_spooled.tex   3 Oct 2016 11:36:08
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R & -1733.903 &     0.995 &  -980.709 &     0.865 &  -936.173 &     0.890 &  -936.672 &     0.825 & -2027.025 &     0.930 & -2559.704 &     0.885 \\  
-Mother'sEducation &  -258.666 &     0.800 &  -408.455 &     0.840 &  -128.223 &     0.640 &  -204.455 &     0.685 &    13.224 &     0.485 &    38.694 &     0.470 \\  
-PIAT(5-7) &         . &         . &         . &         . &   -25.556 &     0.750 &   -68.827 &     0.785 &   -46.540 &     0.815 &  -112.712 &     0.820 \\  
-Education(30) &         . &         . &         . &         . &  -388.779 &     0.955 &  -409.459 &     0.930 &  -459.663 &     0.890 &  -487.178 &     0.810 \\  
-LaborIncome(21) &         . &         . &         . &         . &    -0.091 &     0.990 &    -0.086 &     0.975 &    -0.118 &     0.980 &    -0.142 &     0.950 \\  
-BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &    12.734 &     0.425 &    15.971 &     0.390 \\  
-Cognitive &         . &         . &  -548.409 &     0.845 &         . &         . &   342.247 &     0.370 &         . &         . &   491.634 &     0.340 \\  
-NonCognitive &         . &         . &   563.416 &     0.170 &         . &         . &   190.481 &     0.390 &         . &         . &  -281.835 &     0.615 \\  
-Constant &  5531.763 &     0.045 &  6888.887 &     0.065 & 12519.805 &     0.030 & 17843.746 &     0.060 & 14798.421 &     0.045 & 22104.971 &     0.080 \\  
-F-stat &     3.322 &         . &     2.449 &         . &     3.373 &         . &     2.470 &         . &     2.938 &         . &     3.201 &         . \\  
-R2 &     0.057 &         . &     0.108 &         . &     0.160 &         . &     0.189 &         . &     0.219 &         . &     0.287 &         . \\  
-Observations &   132.910 &         . &   100.950 &         . &   111.240 &         . &    93.200 &         . &    75.450 &         . &    61.320 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R & -1678.706 &     0.990 &  -952.304 &     0.855 & -1043.970 &     0.915 & -1061.716 &     0.840 \\  
+Mother'sEducation &  -228.909 &     0.790 &  -373.481 &     0.850 &   -88.084 &     0.575 &  -164.299 &     0.620 \\  
+PIAT(5-7) &         . &         . &         . &         . &   -25.165 &     0.765 &   -63.598 &     0.765 \\  
+Education(30) &         . &         . &         . &         . &  -340.259 &     0.945 &  -335.886 &     0.875 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.093 &     0.995 &    -0.089 &     0.985 \\  
+Cognitive &         . &         . &  -588.565 &     0.900 &         . &         . &   221.459 &     0.410 \\  
+NonCognitive &         . &         . &   441.243 &     0.220 &         . &         . &   163.844 &     0.365 \\  
+Constant &  5171.770 &     0.055 &  6532.795 &     0.050 & 11573.139 &     0.030 & 16155.971 &     0.045 \\  
+F-stat &     3.017 &         . &     2.271 &         . &     3.104 &         . &     2.255 &         . \\  
+R2 &     0.051 &         . &     0.094 &         . &     0.150 &         . &     0.178 &         . \\  
+Observations &   133.000 &         . &   101.000 &         . &   135.000 &         . &   133.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
