--- a/output/abccare_endog_p_inc21y_spooled.tex
+++ b/output/abccare_endog_p_inc21y_spooled.tex
@@ -1,18 +1,17 @@
-% matrix: allp_inc21y_spooled file: abccare_endog_p_inc21y_spooled.tex  30 Sep 2016 13:35:57
+% matrix: allp_inc21y_spooled file: abccare_endog_p_inc21y_spooled.tex   3 Oct 2016 11:36:29
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R &  9135.193 &     0.005 &  8340.508 &     0.020 &  5996.243 &     0.090 &  8323.831 &     0.020 &  5663.172 &     0.140 &  9081.051 &     0.050 \\  
-Mother'sEducation &   371.487 &     0.295 &    56.815 &     0.490 &   116.469 &     0.460 &   331.883 &     0.395 &    23.231 &     0.500 &  1416.081 &     0.155 \\  
-PIAT(5-7) &         . &         . &         . &         . &   167.255 &     0.270 &   -36.317 &     0.545 &   417.948 &     0.120 &  -366.897 &     0.705 \\  
-Education(30) &         . &         . &         . &         . &   305.407 &     0.355 &   390.837 &     0.390 &  -550.126 &     0.620 & -1974.946 &     0.785 \\  
-LaborIncome(21) &         . &         . &         . &         . &    -0.029 &     0.555 &     0.118 &     0.330 &    -0.028 &     0.520 &     0.071 &     0.440 \\  
-BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &   -82.230 &     0.655 &    10.088 &     0.495 \\  
-Cognitive &         . &         . &  3740.234 &     0.045 &         . &         . &  2121.137 &     0.275 &         . &         . &  5186.448 &     0.170 \\  
-NonCognitive &         . &         . &  3439.402 &     0.100 &         . &         . &  6340.704 &     0.025 &         . &         . &  8709.012 &     0.025 \\  
-Constant & 17900.693 &     0.020 & 20605.602 &     0.025 &   595.021 &     0.490 & 14073.724 &     0.390 & -8777.005 &     0.580 & 63774.410 &     0.180 \\  
-F-stat &     3.968 &         . &     3.853 &         . &     2.022 &         . &     3.354 &         . &     2.180 &         . &     7.423 &         . \\  
-R2 &     0.095 &         . &     0.227 &         . &     0.133 &         . &     0.319 &         . &     0.201 &         . &     0.498 &         . \\  
-Observations &    72.700 &         . &    57.260 &         . &    57.760 &         . &    52.050 &         . &    39.910 &         . &    35.210 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R &  8451.163 &     0.010 &  7692.958 &     0.035 &  5076.803 &     0.140 &  7364.933 &     0.055 \\  
+Mother'sEducation &   436.410 &     0.320 &    55.009 &     0.475 &    82.661 &     0.470 &   135.623 &     0.450 \\  
+PIAT(5-7) &         . &         . &         . &         . &   143.449 &     0.310 &   -74.255 &     0.565 \\  
+Education(30) &         . &         . &         . &         . &   428.717 &     0.290 &   514.349 &     0.285 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.003 &     0.500 &     0.171 &     0.250 \\  
+Cognitive &         . &         . &  3642.984 &     0.045 &         . &         . &  2510.256 &     0.215 \\  
+NonCognitive &         . &         . &  3614.479 &     0.085 &         . &         . &  6541.107 &     0.010 \\  
+Constant & 17737.916 &     0.020 & 20865.068 &     0.030 &  1859.113 &     0.475 & 18028.070 &     0.320 \\  
+F-stat &     3.570 &         . &     3.542 &         . &     1.897 &         . &     3.248 &         . \\  
+R2 &     0.089 &         . &     0.216 &         . &     0.127 &         . &     0.316 &         . \\  
+Observations &    73.000 &         . &    57.000 &         . &    75.000 &         . &    70.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
