--- a/output/perry_endog_hs40_spooled.tex
+++ b/output/perry_endog_hs40_spooled.tex
@@ -1,19 +1,18 @@
-% matrix: allhs40_spooled file: perry_endog_hs40_spooled.tex  30 Sep 2016 12:09:43
+% matrix: allhs40_spooled file: perry_endog_hs40_spooled.tex   3 Oct 2016 11:52:17
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R &     0.132 &     0.055 &     0.162 &     0.060 &     0.106 &     0.095 &     0.153 &     0.065 &     0.105 &     0.085 &     0.153 &     0.065 \\  
-Mother'sEducation &     0.045 &     0.005 &     0.018 &     0.225 &     0.006 &     0.380 &    -0.011 &     0.675 &     0.005 &     0.385 &    -0.011 &     0.695 \\  
-BaselineIQ &         . &         . &         . &         . &     0.004 &     0.310 &     0.004 &     0.340 &     0.004 &     0.315 &     0.004 &     0.375 \\  
-Education(30) &         . &         . &         . &         . &     0.104 &     0.000 &     0.106 &     0.000 &     0.104 &     0.000 &     0.107 &     0.000 \\  
-LaborIncome(27) &         . &         . &         . &         . &     0.000 &     0.030 &     0.000 &     0.195 &     0.000 &     0.030 &     0.000 &     0.195 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &    -0.002 &     0.500 &    -0.017 &     0.560 \\  
-Cognitive &         . &         . &     0.113 &     0.025 &         . &         . &    -0.003 &     0.510 &         . &         . &    -0.002 &     0.510 \\  
-Externalizing &         . &         . &    -0.019 &     0.525 &         . &         . &     0.037 &     0.445 &         . &         . &     0.037 &     0.450 \\  
-Academic &         . &         . &    -0.009 &     0.525 &         . &         . &    -0.059 &     0.625 &         . &         . &    -0.059 &     0.635 \\  
-Constant &     0.109 &     0.270 &     0.331 &     0.125 &    -1.200 &     0.955 &    -1.101 &     0.860 &    -1.199 &     0.955 &    -1.093 &     0.865 \\  
-F-stat &     4.968 &         . &     4.953 &         . &    11.872 &         . &     7.270 &         . &    10.534 &         . &     7.164 &         . \\  
-R2 &     0.074 &         . &     0.162 &         . &     0.315 &         . &     0.315 &         . &     0.322 &         . &     0.327 &         . \\  
-Observations &   112.420 &         . &    78.310 &         . &   105.140 &         . &    72.110 &         . &   105.140 &         . &    72.110 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R &     0.230 &     0.000 &     0.318 &     0.000 &     0.191 &     0.000 &     0.324 &     0.000 \\  
+Mother'sEducation &     0.052 &     0.000 &     0.010 &     0.333 &     0.021 &     0.167 &    -0.013 &     0.833 \\  
+BaselineIQ &         . &         . &         . &         . &    -0.002 &     0.833 &    -0.003 &     1.000 \\  
+Education(30) &         . &         . &         . &         . &     0.094 &     0.000 &     0.080 &     0.000 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.000 &     0.000 &     0.000 &     0.500 \\  
+Cognitive &         . &         . &     0.077 &     0.333 &         . &         . &     0.011 &     0.500 \\  
+Externalizing &         . &         . &     0.097 &     0.333 &         . &         . &     0.028 &     0.500 \\  
+Academic &         . &         . &    -0.072 &     0.667 &         . &         . &     0.028 &     0.500 \\  
+Constant &    -0.009 &     0.500 &     0.319 &     0.000 &    -0.811 &     1.000 &    -0.203 &     0.667 \\  
+F-stat &     8.158 &         . &     9.103 &         . &    10.095 &         . &    12.074 &         . \\  
+R2 &     0.116 &         . &     0.228 &         . &     0.286 &         . &     0.314 &         . \\  
+Observations &   114.000 &         . &    79.000 &         . &   108.000 &         . &    74.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
