--- a/output/perry_endog_inc40_spooled.tex
+++ b/output/perry_endog_inc40_spooled.tex
@@ -1,19 +1,18 @@
-% matrix: allinc40_spooled file: perry_endog_inc40_spooled.tex  30 Sep 2016 12:08:46
+% matrix: allinc40_spooled file: perry_endog_inc40_spooled.tex   3 Oct 2016 11:52:17
 \begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R &  3406.239 &     0.295 &  4763.972 &     0.280 & -2488.744 &     0.715 & -1220.114 &     0.560 & -2848.218 &     0.730 & -2276.492 &     0.635 \\  
-Mother'sEducation &  1425.444 &     0.115 &     6.573 &     0.495 &  -806.375 &     0.760 & -1139.198 &     0.830 &  -732.494 &     0.750 & -1209.879 &     0.850 \\  
-BaselineIQ &         . &         . &         . &         . &   633.646 &     0.020 &   705.351 &     0.050 &   588.359 &     0.025 &   798.949 &     0.050 \\  
-Education(30) &         . &         . &         . &         . &  5278.501 &     0.010 &  6660.161 &     0.010 &  4826.815 &     0.005 &  6243.950 &     0.010 \\  
-LaborIncome(27) &         . &         . &         . &         . &     0.580 &     0.000 &     0.544 &     0.000 &     0.563 &     0.000 &     0.538 &     0.000 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . & 12337.827 &     0.000 & 13531.420 &     0.005 \\  
-Cognitive &         . &         . & 12971.826 &     0.000 &         . &         . &  2262.454 &     0.345 &         . &         . &   637.051 &     0.440 \\  
-Externalizing &         . &         . & -1.89e+04 &     0.890 &         . &         . & -2.20e+04 &     0.935 &         . &         . & -2.13e+04 &     0.940 \\  
-Academic &         . &         . & 11651.536 &     0.170 &         . &         . & 14414.466 &     0.150 &         . &         . & 14575.125 &     0.140 \\  
-Constant & 11005.526 &     0.155 & 20193.223 &     0.095 & -9.50e+04 &     0.995 & -1.19e+05 &     0.985 & -9.32e+04 &     0.995 & -1.27e+05 &     0.995 \\  
-F-stat &     2.746 &         . &     6.282 &         . &    15.130 &         . &    16.311 &         . &    16.019 &         . &    19.332 &         . \\  
-R2 &     0.035 &         . &     0.238 &         . &     0.443 &         . &     0.553 &         . &     0.486 &         . &     0.596 &         . \\  
-Observations &   112.120 &         . &    77.980 &         . &   105.460 &         . &    72.350 &         . &   105.460 &         . &    72.350 &         . \\  
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+R &  5505.214 &     0.167 &  7652.115 &     0.167 & -1528.036 &     0.667 & -1661.885 &     0.500 \\  
+Mother'sEducation &   363.502 &     0.333 &  -280.097 &     0.500 & -1958.883 &     1.000 & -2068.965 &     0.667 \\  
+BaselineIQ &         . &         . &         . &         . &   393.885 &     0.000 &   334.076 &     0.333 \\  
+Education(30) &         . &         . &         . &         . &  4557.407 &     0.000 &  4969.782 &     0.000 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.631 &     0.000 &     0.642 &     0.000 \\  
+Cognitive &         . &         . & 11394.728 &     0.000 &         . &         . &  3896.681 &     0.167 \\  
+Externalizing &         . &         . & -1.55e+04 &     1.000 &         . &         . & -3.01e+04 &     1.000 \\  
+Academic &         . &         . & 12157.312 &     0.167 &         . &         . & 27306.314 &     0.000 \\  
+Constant & 19374.326 &     0.000 & 21271.533 &     0.167 & -5.87e+04 &     1.000 & -6.19e+04 &     0.833 \\  
+F-stat &     1.394 &         . &     3.401 &         . &     9.864 &         . &     9.602 &         . \\  
+R2 &     0.022 &         . &     0.227 &         . &     0.389 &         . &     0.527 &         . \\  
+Observations &   111.000 &         . &    73.000 &         . &   102.000 &         . &    66.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
