--- a/output/perry_endog_inc40_sfemale.tex
+++ b/output/perry_endog_inc40_sfemale.tex
@@ -1,18 +1,18 @@
-% matrix: allinc40_sfemale file: perry_endog_inc40_sfemale.tex   3 Oct 2016 11:52:15
+% matrix: allinc40_sfemale file: perry_endog_inc40_sfemale.tex   3 Oct 2016 11:55:03
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-R &  1067.098 &     0.500 &  3149.659 &     0.500 & -3795.001 &     0.667 &  3679.265 &     0.333 \\  
-Mother'sEducation &  2882.077 &     0.000 &  1976.897 &     0.000 &  -567.916 &     0.833 & -1380.887 &     0.667 \\  
-BaselineIQ &         . &         . &         . &         . &  -847.821 &     0.667 & -1680.914 &     0.667 \\  
-Education(30) &         . &         . &         . &         . &  8466.265 &     0.000 & 13001.257 &     0.000 \\  
-LaborIncome(27) &         . &         . &         . &         . &     0.192 &     0.333 &     0.081 &     0.500 \\  
-Cognitive &         . &         . & -2400.533 &     0.667 &         . &         . &  1929.936 &     0.333 \\  
-Externalizing &         . &         . & -1.50e+04 &     0.833 &         . &         . & -2.05e+04 &     1.000 \\  
-Academic &         . &         . &  3405.069 &     0.500 &         . &         . & 16216.509 &     0.000 \\  
-Constant &  -804.050 &     0.500 &  2228.491 &     0.500 & -7219.820 &     0.667 &  4279.359 &     0.500 \\  
-F-stat &     3.955 &         . &    11.646 &         . &    24.233 &         . &    27.134 &         . \\  
-R2 &     0.120 &         . &     0.305 &         . &     0.448 &         . &     0.579 &         . \\  
-Observations &    46.000 &         . &    29.000 &         . &    46.000 &         . &    28.000 &         . \\  
+R &  1766.253 &     0.410 & -2365.732 &     0.595 &  2185.236 &     0.405 &  2367.960 &     0.420 \\  
+Mother'sEducation &  2789.810 &     0.010 &  2170.135 &     0.120 &   -69.542 &     0.540 &  -943.695 &     0.705 \\  
+BaselineIQ &         . &         . &         . &         . &  -132.444 &     0.595 &  -496.426 &     0.730 \\  
+Education(30) &         . &         . &         . &         . &  6436.880 &     0.020 &  9084.893 &     0.060 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.319 &     0.065 &     0.326 &     0.155 \\  
+Cognitive &         . &         . &  3596.580 &     0.215 &         . &         . &  1912.709 &     0.320 \\  
+Externalizing &         . &         . & -2.97e+04 &     0.890 &         . &         . & -1.48e+04 &     0.800 \\  
+Academic &         . &         . & 17651.066 &     0.185 &         . &         . &  9261.470 &     0.255 \\  
+Constant & -2546.816 &     0.620 & -1265.775 &     0.555 & -5.40e+04 &     0.905 & -5.27e+04 &     0.740 \\  
+F-stat &     3.733 &         . &     8.347 &         . &     9.544 &         . &    28.944 &         . \\  
+R2 &     0.106 &         . &     0.320 &         . &     0.450 &         . &     0.618 &         . \\  
+Observations &    47.000 &         . &    32.000 &         . &    46.000 &         . &    31.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
