new tests tables

--- a/output/abccare_endog_si30y_inc_labor_smale_ready.tex
+++ b/output/abccare_endog_si30y_inc_labor_smale_ready.tex
@@ -1,18 +1,15 @@
-
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ & 18169.158 &     0.075 & 21891.223 &     0.150 & 15649.704 &     0.115 & 18835.850 &     0.185 &  6692.125 &     0.325 & -6376.989 &     0.600 \\  
-Mother's Education &  5722.000 &     0.090 &  6064.495 &     0.260 &  4618.608 &     0.155 &  8200.867 &     0.160 & -1400.198 &     0.595 &  1963.911 &     0.405 \\  
-PIAT (5-7) &         &         &         &         &   459.787 &     0.180 &  1828.085 &     0.110 &   482.878 &     0.245 &  3339.008 &     0.095 \\  
-Education (30) &         &         &         &         & 15803.528 &     0.000 & 22139.904 &     0.015 & 14309.524 &     0.010 & 26836.996 &     0.025 \\  
-Labor Income (21) &         &         &         &         &     0.107 &     0.410 &     0.193 &     0.365 &     0.251 &     0.320 &     0.011 &     0.495 \\  
-BMI (34) &         &         &         &         &         &         &         &         &  -603.780 &     0.810 & -1545.085 &     0.920 \\  
-Cognitive &         &         &  -896.956 &     0.525 &         &         & -1.37e+04 &     0.815 &         &         & -1.38e+04 &     0.770 \\  
-Non-cognitive &         &         & 10273.761 &     0.105 &         &         &  7533.493 &     0.175 &         &         &  2273.177 &     0.410 \\  
-Constant & -3.16e+04 &     0.780 & -3.48e+04 &     0.630 & -2.72e+05 &     0.985 & -5.26e+05 &     0.965 & -1.73e+05 &     0.960 & -5.98e+05 &     0.940 \\  \midrule
-$F$-stat &     2.327 &         &     1.963 &         &     4.833 &         &     7.182 &         &     4.348 &         &    90.584 &         \\  
-$R^2$ &     0.068 &         &     0.128 &         &     0.343 &         &     0.465 &         &     0.491 &         &     0.806 &         \\  
-Observations &    66 &         &    48 &         &    55 &         &    42 &         &    33 &         &    23 &         \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+R & 18169.158 &     0.075 & 21891.223 &     0.150 & 15649.704 &     0.115 & 18835.850 &     0.185 \\  
+Mother's Education &  5722.000 &     0.090 &  6064.495 &     0.260 &  4618.608 &     0.155 &  8200.867 &     0.160 \\  
+PIAT (5-7) &         . &         . &         . &         . &   459.787 &     0.180 &  1828.085 &     0.110 \\  
+Education (30) &         . &         . &         . &         . & 15803.528 &     0.000 & 22139.904 &     0.015 \\  
+Labor Income (21) &         . &         . &         . &         . &     0.107 &     0.410 &     0.193 &     0.365 \\  
+Cognitive &         . &         . &  -896.956 &     0.525 &         . &         . & -1.37e+04 &     0.815 \\  
+Non Cognitive &         . &         . & 10273.761 &     0.105 &         . &         . &  7533.493 &     0.175 \\  
+Constant & -31,600.00 &     0.780 & -34,800.00 &     0.630 & -272,000.00 &     0.985 & -526,000.00 &     0.965 \\  \midrule
+F-stat &     2.327 &         . &     1.963 &         . &     4.833 &         . &     7.182 &         . \\  \midrule 
+R2 &     0.068 &         . &     0.128 &         . &     0.343 &         . &     0.465 &         . \\  
+Observations &    66.000 &         . &    48.000 &         . &    65.000 &         . &    63.000 &         . \\  
 \bottomrule \end{tabular}
-
