--- a/output/abccare_endog_p_inc21y_sfemale_ready.tex
+++ b/output/abccare_endog_p_inc21y_sfemale_ready.tex
@@ -1,18 +1,15 @@
-
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  5502.352 &     0.135 &  5469.656 &     0.150 &  4056.081 &     0.280 &  5203.703 &     0.205 &  3271.972 &     0.365 &  5574.048 &     0.255 \\  
-Mother's Education &   722.072 &     0.260 &   113.924 &     0.470 &  -196.049 &     0.545 &   299.293 &     0.400 &    25.077 &     0.500 &  2303.948 &     0.160 \\  
-PIAT (5-7) &         &         &         &         &   517.466 &     0.040 &  -302.384 &     0.710 &   626.869 &     0.050 &  -619.031 &     0.795 \\  
-Education (30) &         &         &         &         &   246.290 &     0.450 &   562.972 &     0.330 &  -973.790 &     0.620 & -4388.373 &     0.925 \\  
-Labor Income (21) &         &         &         &         &     0.069 &     0.465 &     0.254 &     0.320 &     0.200 &     0.370 &     0.503 &     0.125 \\  
-BMI (34) &         &         &         &         &         &         &         &         &     2.519 &     0.495 &   120.432 &     0.360 \\  
-Cognitive &         &         &  6607.175 &     0.000 &         &         &  6038.316 &     0.100 &         &         &  7246.854 &     0.100 \\  
-Non-cognitive &         &         &  6623.318 &     0.020 &         &         &  8918.265 &     0.035 &         &         & 14663.556 &     0.005 \\  
-Constant & 15462.470 &     0.100 & 21235.035 &     0.065 & -2.87e+04 &     0.815 & 39177.195 &     0.270 & -2.83e+04 &     0.765 &  1.00e+05 &     0.100 \\  \midrule
-$F$-stat &     2.077 &         &     5.290 &         &     3.000 &         &     6.206 &         &     3.655 &         &    35.656 &         \\  
-$R^2$ &     0.077 &         &     0.391 &         &     0.225 &         &     0.487 &         &     0.295 &         &     0.739 &         \\  
-Observations &    40 &         &    33 &         &    35 &         &    32 &         &    27 &         &    24 &         \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+R &  5,607.220 &     0.130 &  6,189.849 &     0.160 &  3,448.762 &     0.285 &  4,886.315 &     0.215 \\  
+Mother's Education &   742.887 &     0.270 &   255.999 &     0.415 &  -156.375 &     0.515 &   378.746 &     0.385 \\  
+PIAT (5-7) &         . &         . &         . &         . &   556.049 &     0.045 &  -151.954 &     0.625 \\  
+Education (30) &         . &         . &         . &         . &   539.016 &     0.300 &   850.040 &     0.300 \\  
+Labor Income (21) &         . &         . &         . &         . &     0.075 &     0.450 &     0.281 &     0.300 \\  
+Cognitive &         . &         . &  7,025.303 &     0.000 &         . &         . &  5,078.749 &     0.170 \\  
+Non Cognitive &         . &         . &  6,134.305 &     0.015 &         . &         . &  8,335.751 &     0.025 \\  
+Constant & 14,995.841 &     0.130 & 19,332.934 &     0.065 & -36,800.00 &     0.855 & 19,264.852 &     0.380 \\  
+F-stat &     2.241 &         . &     5.844 &         . &     4.130 &         . &     7.660 &         . \\  \\ \midrule
+R2 &     0.084 &         . &     0.412 &         . &     0.254 &         . &     0.504 &         . \\  
+Observations &    39 &         . &    32 &         . &    40 &         . &    42 &         . \\  
 \bottomrule \end{tabular}
-
