--- a/output/abccare_endog_si30y_inc_labor_sfemale_ready.tex
+++ b/output/abccare_endog_si30y_inc_labor_sfemale_ready.tex
@@ -1,18 +1,15 @@
-
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  1813.936 &     0.370 &  -142.893 &     0.515 & -6779.593 &     0.915 & -5823.283 &     0.890 & -1.07e+04 &     0.965 & -1.18e+04 &     0.950 \\  
-Mother's Education &  -362.030 &     0.565 & -1172.507 &     0.720 & -2284.401 &     0.915 & -2006.928 &     0.870 & -2566.533 &     0.875 & -2248.212 &     0.800 \\  
-PIAT (5-7) &         &         &         &         &   214.441 &     0.240 &   199.340 &     0.315 &   255.187 &     0.230 &    -1.569 &     0.500 \\  
-Education (30) &         &         &         &         &  3558.591 &     0.015 &  4019.946 &     0.005 &  5934.033 &     0.005 &  7140.629 &     0.005 \\  
-Labor Income (21) &         &         &         &         &     0.328 &     0.130 &     0.400 &     0.125 &     0.320 &     0.155 &     0.219 &     0.295 \\  
-BMI (34) &         &         &         &         &         &         &         &         &  -106.867 &     0.690 &  -138.059 &     0.725 \\  
-Cognitive &         &         &  4268.597 &     0.055 &         &         & -1513.535 &     0.645 &         &         &  1103.300 &     0.385 \\  
-Non-cognitive &         &         &  -733.528 &     0.565 &         &         &  3086.903 &     0.185 &         &         &   486.416 &     0.450 \\  
-Constant & 27597.588 &     0.095 & 34798.168 &     0.065 & -2.01e+04 &     0.770 & -2.87e+04 &     0.760 & -4.23e+04 &     0.895 & -3.21e+04 &     0.785 \\  \midrule
-$F$-stat &     1.372 &         &     2.701 &         &     7.850 &         &     8.768 &         &     7.351 &         &     8.930 &         \\  
-$R^2$ &     0.038 &         &     0.137 &         &     0.343 &         &     0.383 &         &     0.361 &         &     0.436 &         \\  
-Observations &    67 &         &    52 &         &    56 &         &    51 &         &    44 &         &    40 &         \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+R &  3,401.892 &     0.305 &  1,194.706 &     0.410 & -6,899.006 &     0.915 & -5,862.320 &     0.840 \\  
+Mother's Education &  -852.061 &     0.675 & -1,688.467 &     0.835 & -2,581.049 &     0.975 & -2,473.902 &     0.965 \\  
+PIAT (5-7) &         . &         . &         . &         . &   260.764 &     0.165 &   347.907 &     0.170 \\  
+Education (30) &         . &         . &         . &         . &  3,580.642 &     0.000 &  3,916.084 &     0.005 \\  
+LaborIncome (21) &         . &         . &         . &         . &     0.329 &     0.175 &     0.392 &     0.160 \\  
+Cognitive &         . &         . &  3,828.286 &     0.130 &         . &         . & -2,905.637 &     0.785 \\  
+Non Cognitive &         . &         . & -1,663.392 &     0.655 &         . &         . &  2,051.882 &     0.300 \\  
+Constant & 32,117.510 &     0.055 & 39,943.031 &     0.025 & -21,500.00 &     0.800 & -36,600.00 &     0.840 \\  \\ \midrule
+F-stat &     1.234 &         . &     2.812 &         . &     9.052 &         . &     8.916 &         . \\  
+R2 &     0.039 &         . &     0.143 &         . &     0.354 &         . &     0.393 &         . \\  
+Observations &    67.000 &         . &    52.000 &         . &    65.000 &         . &    70.000 &         . \\  
 \bottomrule \end{tabular}
-
