reformatted updated tables

--- a/output/perry_endog_idle40_sfemale_ready.tex
+++ b/output/perry_endog_idle40_sfemale_ready.tex
@@ -1,18 +1,18 @@
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &     0.046 &     0.325 &     0.063 &     0.325 &     0.065 &     0.265 &     0.101 &     0.310 &     0.063 &     0.270 &     0.068 &     0.340 \\  
-Mother's Education &    -0.013 &     0.725 &    -0.021 &     0.675 &     0.008 &     0.400 &    -0.004 &     0.555 &     0.009 &     0.400 &    -0.013 &     0.610 \\  
-Baseline IQ &          &         &         &         &     0.003 &     0.380 &     0.016 &     0.100 &     0.003 &     0.370 &     0.017 &     0.145 \\  
-Education (30) &          &         &         &         &    -0.023 &     0.805 &     0.013 &     0.400 &    -0.028 &     0.810 &    -0.006 &     0.530 \\  
-Labor Income (27) &         &         &         &         &    -0.000 &     0.960 &    -0.000 &     0.945 &    -0.000 &     0.955 &    -0.000 &     0.935 \\  
-Health Index (30) &         &         &         &         &         &         &         &         &     0.084 &     0.215 &     0.236 &     0.115 \\  
-Cognitive &         &         &    -0.026 &     0.605 &         &         &    -0.073 &     0.760 &         &         &    -0.092 &     0.800 \\  
-Externalizing &         &         &    -0.023 &     0.520 &         &         &    -0.098 &     0.630 &         &         &    -0.135 &     0.670 \\  
-Academic &         &         &     0.030 &     0.420 &         &         &     0.039 &     0.430 &         &         &     0.052 &     0.410 \\  
-Constant &     0.252 &     0.135 &     0.353 &     0.200 &     0.178 &     0.425 &    -1.171 &     0.850 &     0.209 &     0.420 &    -1.001 &     0.750 \\  \midrule
-$F$-stat &     1.111 &         &     1.414 &         &     1.801 &         &     2.944 &         &     1.750 &         &     3.985 &         \\  
-$R^2$ &     0.048 &         &     0.215 &         &     0.186 &         &     0.413 &         &     0.224 &         &     0.504 &         \\  
-Observations &    46 &         &    31&         &    45 &         &    30 &         &    45 &         &    30 &         \\  
-\bottomrule \end{tabular}
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+$R$ &     0.041 &     0.335 &     0.040 &     0.400 &     0.065 &     0.295 &     0.078 &     0.315 \\  
+Mother's Education &    -0.017 &     0.755 &    -0.027 &     0.725 &     0.003 &     0.470 &    -0.015 &     0.590 \\  
+Baseline IQ &         &         &         &         &     0.003 &     0.415 &     0.015 &     0.105 \\  
+Education (30) &         &         &         &         &    -0.017 &     0.735 &     0.018 &     0.370 \\  
+Labor Income (27) &         &         &         &         &    -0.000 &     0.950 &    -0.000 &     0.915 \\  
+Cognitive &         &         &    -0.038 &     0.655 &         &         &    -0.076 &     0.780 \\  
+Externalizing &         &         &    -0.107 &     0.610 &         &         &    -0.210 &     0.740 \\  
+Academic &         &         &     0.078 &     0.425 &         &         &     0.118 &     0.370 \\  
+Constant &     0.288 &     0.125 &     0.425 &     0.215 &     0.216 &     0.380 &    -0.988 &     0.770 \\  \midrule
+$F$-stat &     1.273 &         &     1.881 &         &     1.768 &         &     3.263 &         \\  
+$R^2$ &     0.055 &         &     0.250 &         &     0.192 &         &     0.446 &         \\  
+Observations &    45 &         &    30 &         &    44 &         &    29 &         \\  
+\bottomrule
+\end{tabular}
 
