--- a/output/perry_endog_inc40_smale_ready.tex
+++ b/output/perry_endog_inc40_smale_ready.tex
@@ -1,19 +1,18 @@
-
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  4869.612 &     0.280 & 11445.855 &     0.160 & -4401.085 &     0.705 &   316.067 &     0.485 & -5212.235 &     0.770 & -1166.844 &     0.530 \\  
-Mother's Education &    33.811 &     0.485 & -1236.716 &     0.745 & -1526.763 &     0.815 &  -822.059 &     0.665 & -1505.061 &     0.825 &  -646.511 &     0.670 \\  
-Baseline IQ &         &         &         &         &  1006.931 &     0.020 &  1281.711 &     0.065 &   872.478 &     0.050 &  1312.354 &     0.050 \\  
-Education (30) &         &         &         &         &  4215.785 &     0.065 &  5123.981 &     0.070 &  3771.934 &     0.080 &  4943.399 &     0.080 \\  
-Labor Income (27) &         &         &         &         &     0.696 &     0.000 &     0.608 &     0.005 &     0.695 &     0.000 &     0.599 &     0.010 \\  
-Health Index (30) &         &         &         &         &         &         &         &         & 13591.124 &     0.005 & 16332.684 &     0.025 \\  
-Cognitive &         &         & 17865.373 &     0.005 &         &         &  1579.767 &     0.415 &         &         &  -825.233 &     0.555 \\  
-Externalizing &         &         & -2.33e+04 &     0.875 &         &         & -3.43e+04 &     0.950 &         &         & -3.37e+04 &     0.925 \\  
-Academic &         &         & 12765.900 &     0.280 &         &         & 24248.145 &     0.110 &         &         & 23250.219 &     0.160 \\  
-Constant & 25151.734 &     0.100 & 28938.467 &     0.090 & -1.05e+05 &     1.000 & -1.51e+05 &     0.985 & -9.75e+04 &     0.995 & -1.62e+05 &     0.990 \\  \midrule
-$F$-stat &     1.402 &         &    22.551 &         &    12.898 &         &    38.643 &         &    13.191 &         &    42.885 &         \\  
-$R^2$ &     0.035 &         &     0.360 &         &     0.509 &         &     0.671 &         &     0.551 &         &     0.726 &         \\  
-Observations &    67 &         &    47 &         &    61 &         &    42 &         &    61 &         &    42 &         \\  
-\bottomrule \end{tabular}
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+$R$ &  4869.612 &     0.280 & 11445.855 &     0.160 & -4401.085 &     0.705 &   316.067 &     0.485 \\  
+Mother's Education &    33.811 &     0.485 & -1236.716 &     0.745 & -1526.763 &     0.815 &  -822.059 &     0.665 \\  
+Baseline IQ &         &         &         &         &  1006.931 &     0.020 &  1281.711 &     0.065 \\  
+Education (30) &         &         &         &         &  4215.785 &     0.065 &  5123.981 &     0.070 \\  
+Labor Income (27) &         &         &         &         &     0.696 &     0.000 &     0.608 &     0.005 \\  
+Cognitive &         &         & 17865.373 &     0.005 &         &         &  1579.767 &     0.415 \\  
+Externalizing &         &         & -23300 &     0.875 &         &         & -3.43e+04 &     0.950 \\  
+Academic &         &         & 12765.900 &     0.280 &         &         & 24248.145 &     0.110 \\  
+Constant & 25151.734 &     0.100 & 28938.467 &     0.090 & -105000 &     1.000 & -151000 &     0.985 \\  \midrule
+$F$-stat &     1.402 &         &    22.551 &         &    12.898 &         &    38.643 &         \\  
+$R^2$ &     0.035 &         &     0.360 &         &     0.509 &         &     0.671 &         \\  
+Observations &    67 &         &    47 &         &    61 &         &    42 &         \\  
+\bottomrule
+\end{tabular}
 
