--- a/output/perry_endog_hs40_sfemale_ready.tex
+++ b/output/perry_endog_hs40_sfemale_ready.tex
@@ -1,18 +1,18 @@
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule 
-$R$ &     0.237 &     0.040 &     0.199 &     0.135 &     0.271 &     0.020 &     0.307 &     0.120 &     0.263 &     0.025 &     0.269 &     0.145 \\  
-Mother's Education &     0.037 &     0.075 &    -0.011 &     0.635 &     0.013 &     0.320 &    -0.008 &     0.550 &     0.014 &     0.330 &    -0.018 &     0.655 \\  
-Baseline IQ &         &         &         &         &     0.005 &     0.380 &    -0.003 &     0.530 &     0.004 &     0.390 &    -0.004 &     0.555 \\  
-Education (30) &         &         &         &         &     0.098 &     0.050 &     0.062 &     0.260 &     0.092 &     0.065 &     0.040 &     0.355 \\  
-Labor Income (27) &         &         &          &          &    -0.000 &     0.610 &    -0.000 &     0.705 &    -0.000 &     0.595 &    -0.000 &     0.720 \\  
-Health Index (30) &          &         &          &         &         &         &         &         &     0.066 &     0.320 &     0.246 &     0.130 \\  
-Cognitive &          &          &     0.030 &     0.355 &         &         &     0.010 &     0.445 &         &         &    -0.018 &     0.625 \\  
-Externalizing &         &         &    -0.158 &     0.640 &         &         &    -0.146 &     0.610 &         &         &    -0.195 &     0.645 \\  
-Academic &         &         &     0.044 &     0.440 &         &         &     0.026 &     0.460 &         &         &     0.045 &     0.435 \\  
-Constant &     0.168 &     0.305 &     0.637 &     0.085 &    -1.235 &     0.745 &     0.091 &     0.490 &    -1.154 &     0.745 &     0.423 &     0.435 \\  \midrule
-$F$-stat &     4.226 &         &     5.802 &         &     6.015 &         &    12.330 &         &     5.801 &         &    15.161 &         \\   
-$R^2$ &     0.141 &         &     0.271 &         &     0.309 &         &     0.465 &         &     0.324 &         &     0.532 &         \\  
-Observations &    47&         &    32 &         &    46 &         &    31 &         &    46 &         &    31 &         \\  
-\bottomrule \end{tabular}
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+$R$ &     0.242 &     0.055 &     0.207 &     0.175 &     0.277 &     0.030 &     0.317 &     0.135 \\  
+Mother's Education &     0.036 &     0.110 &    -0.011 &     0.620 &     0.010 &     0.380 &    -0.006 &     0.520 \\  
+Baseline IQ &         &         &         &         &     0.002 &     0.440 &    -0.004 &     0.595 \\  
+Education (30) &         &         &         &         &     0.095 &     0.060 &     0.043 &     0.365 \\  
+Labor Income (27) &         &         &         &         &    -0.000 &     0.500 &    -0.000 &     0.640 \\  
+Cognitive &         &         &     0.050 &     0.260 &         &         &     0.029 &     0.395 \\  
+Externalizing &         &         &    -0.159 &     0.665 &         &         &    -0.109 &     0.590 \\  
+Academic &         &         &     0.044 &     0.430 &         &         &     0.003 &     0.500 \\  
+Constant &     0.168 &     0.295 &     0.629 &     0.110 &    -0.980 &     0.745 &     0.387 &     0.425 \\  \midrule
+$F$-stat &     4.636 &         &     8.370 &         &     5.812 &         &    14.246 &         \\  
+$R^2$ &     0.146 &         &     0.288 &         &     0.312 &         &     0.473 &         \\  
+Observations &    46 &         &    31 &         &    45 &         &    30 &         \\  
+\bottomrule
+\end{tabular}
 
