--- a/output/perry_endog_inc40_sfemale_ready.tex
+++ b/output/perry_endog_inc40_sfemale_ready.tex
@@ -1,19 +1,19 @@
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+$R$ &  1766.253 &     0.410 & -2365.732 &     0.595 &  2185.236 &     0.405 &  2367.960 &     0.420 \\  
+Mother's Education &  2789.810 &     0.010 &  2170.135 &     0.120 &   -69.542 &     0.540 &  -943.695 &     0.705 \\  
+Baseline IQ &         &         &         &         &  -132.444 &     0.595 &  -496.426 &     0.730 \\  
+Education (30) &         &         &         &         &  6436.880 &     0.020 &  9084.893 &     0.060 \\  
+Labor Income (27) &         &         &         &         &     0.319 &     0.065 &     0.326 &     0.155 \\  
+Cognitive &         &         &  3596.580 &     0.215 &         &         &  1912.709 &     0.320 \\  
+Externalizing &         &         & -29700 &     0.890 &         &         & -1.48e+04 &     0.800 \\  
+Academic &         &         & 17651.066 &     0.185 &         &         &  9261.470 &     0.255 \\  
+Constant & -2546.816 &     0.620 & -1265.775 &     0.555 & -54000 &     0.905 & -52700 &     0.740 \\  \midrule
+$F$-stat &     3.733 &         &     8.347 &         &     9.544 &         &    28.944 &         \\  
+$R^2$ &     0.106 &         &     0.320 &         &     0.450 &         &     0.618 &         \\  
+Observations &    47 &         &    32 &         &    46 &         &    31 &         \\  
+\bottomrule
+\end{tabular}
 
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  1215.714 &     0.440 & -2982.821 &     0.645 &  1928.146 &     0.380 &  2067.990 &     0.430 &  1715.864 &     0.415 &  1811.690 &     0.445 \\  
-Mother's Education &  2810.182 &     0.015 &  1977.426 &     0.180 &  -261.824 &     0.630 & -1426.054 &     0.710 &   -90.478 &     0.525 & -1727.354 &     0.745 \\  
-Baseline IQ &         &         &         &         &  -137.031 &     0.635 &  -551.887 &     0.720 &  -159.193 &     0.695 &  -588.908 &     0.755 \\  
-Education (30) &         &         &         &         &  6235.249 &     0.010 &  8926.400 &     0.085 &  5688.953 &     0.025 &  8241.049 &     0.115 \\  
-Labor Income (27) &         &         &         &         &     0.334 &     0.070 &     0.298 &     0.175 &     0.337 &     0.075 &     0.317 &     0.155 \\  
-Health Index (30) &         &         &         &         &         &         &         &         &  8687.005 &     0.110 &  7746.221 &     0.265 \\  
-Cognitive &         &         &  3013.229 &     0.255 &         &         &  2031.371 &     0.345 &         &         &  1515.436 &     0.405 \\  
-Externalizing &         &         & -2.92e+04 &     0.850 &         &         & -2.09e+04 &     0.805 &         &         & -2.20e+04 &     0.805 \\  
-Academic &         &         & 15072.038 &     0.235 &         &         & 11739.965 &     0.285 &         &         & 11496.702 &     0.295 \\  
-Constant & -1931.123 &     0.565 &   -90.951 &     0.500 & -4.94e+04 &     0.865 & -4.23e+04 &     0.665 & -4.66e+04 &     0.850 & -3.16e+04 &     0.605 \\  \midrule
-$F$-stat &     3.282 &         &     8.182 &         &     9.566 &         &    27.271 &         &    10.070 &         &    33.597 &         \\  
-$R^2$ &     0.094 &         &     0.316 &         &     0.438 &         &     0.601 &         &     0.476 &         &     0.641 &         \\  
-Observations &    45 &         &    31 &         &    44 &         &    30 &         &    44 &         &    30 &         \\  
-\bottomrule \end{tabular}
 
